kubernetes/apps/redis/redis-insight/deployment.yaml
# Redis Insight deployment with name 'redisinsight'
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight #deployment name
  labels:
    app: redisinsight #deployment label
spec:
  replicas: 1 #a single replica pod
  selector:
    matchLabels:
      app: redisinsight #which pods is the deployment managing, as defined by the pod template
  template: #pod template
    metadata:
      labels:
        app: redisinsight #label for pod/s
    spec:
      containers:
        - name: redisinsight #Container name (DNS_LABEL, unique)
          image: redis/redisinsight:latest #repo/image
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          imagePullPolicy: IfNotPresent #Installs the latest Redis Insight version
          volumeMounts:
            - name: redisinsight #Pod volumes to mount into the container's filesystem. Cannot be updated.
              mountPath: /data
          ports:
            - containerPort: 5540 #exposed container port and protocol
              protocol: TCP
      volumes:
        - name: redisinsight
          emptyDir: {} # node-ephemeral volume https://kubernetes.io/docs/concepts/storage/volumes/#emptydir
