kubernetes/apps/redis/redis-insight/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redisinsight-service
spec:
  type: ClusterIP
  selector:
    app: redisinsight
  ports:
    - port: 80
      targetPort: 5540
